--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
     Through computational neuroscience, 
     we try to work out what steps someone takes, 
     in their brain, when they think or act. 
-    Our research group applies these ideas 
-    to three domains that are affected by neurological illnesses:
+    Our research group focuses on three domains,
+    and relates them to neurological illnesses:
 
 
 </p>
