--- a/applets/index.html
+++ b/applets/index.html
@@ -96,6 +96,13 @@
         <a class="tile-title" href="hom/index.html">HOM Physiology</a>
       </div>
 
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="hom/homlogo01.gif">
+        </div>
+        <a class="tile-title" href="applets/apd_profiles">APD Profiles</a>
+      </div>
+
     </div>
   
 </body>
