--- a/applets/index.html
+++ b/applets/index.html
@@ -103,6 +103,27 @@
         <a class="tile-title" href="applets/apd_profiles">APD Profiles</a>
       </div>
 
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="hom/homlogo01.gif">
+        </div>
+        <a class="tile-title" href="cudos/">CUDOS</a>
+      </div>
+
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="hom/homlogo01.gif">
+        </div>
+        <a class="tile-title" href="neurolab">Neurolab</a>
+      </div>
+
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="hom/homlogo01.gif">
+        </div>
+        <a class="tile-title" href="medicine">Medical Lists</a>
+      </div>
+
     </div>
   
 </body>
