--- a/applets/apd_profiles_ace.html
+++ b/applets/apd_profiles_ace.html
@@ -22,7 +22,6 @@
         #right-column {
             border-left: 1px solid #ccc;
             display:flex;
-            padding-left:30px;
         }
         output {
             display: inline-block;
@@ -74,7 +73,7 @@
                     <!-- a slider with values from -1 to +1 -->
                     <div class="form-group row">
                         <h2>Evidence (Logits)</h2>
-                        <div class="col-sm-8">
+                        <div class="">
                             <input type="range" class="form-control-range-not" 
                             id="logits_slider" min="-1" max="1" value="0" disabled="true" step="0.01" list="steplist">
                         </div>
