--- a/applets/apd_profiles_ace.html
+++ b/applets/apd_profiles_ace.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cognitive and Neuropsychiatric Profiles in Atypical Parkinsonian Syndromes</title>
+    <title>Cognitive Profiles in Atypical Parkinsonian Syndromes</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
