--- a/applets/index.html
+++ b/applets/index.html
@@ -93,35 +93,35 @@
         <div class="tile-thumbnail">
           <img src="hom/homlogo01.gif">
         </div>
-        <a class="tile-title" href="hom/index.html">HOM Physiology</a>
+        <a class="tile-title" href="/hom/index.html">HOM Physiology</a>
       </div>
 
       <div class="tile">
         <div class="tile-thumbnail">
           <img src="hom/homlogo01.gif">
         </div>
-        <a class="tile-title" href="applets/apd_profiles">APD Profiles</a>
+        <a class="tile-title" href="apd_profiles.html">APD Profiles</a>
       </div>
 
       <div class="tile">
         <div class="tile-thumbnail">
           <img src="hom/homlogo01.gif">
         </div>
-        <a class="tile-title" href="cudos/">CUDOS</a>
+        <a class="tile-title" href="/cudos">CUDOS</a>
       </div>
 
       <div class="tile">
         <div class="tile-thumbnail">
           <img src="hom/homlogo01.gif">
         </div>
-        <a class="tile-title" href="neurolab">Neurolab</a>
+        <a class="tile-title" href="/neurolab">Neurolab</a>
       </div>
 
       <div class="tile">
         <div class="tile-thumbnail">
           <img src="hom/homlogo01.gif">
         </div>
-        <a class="tile-title" href="medicine">Medical Lists</a>
+        <a class="tile-title" href="/medicine">Medical Lists</a>
       </div>
 
     </div>
