--- a/applets/index.html
+++ b/applets/index.html
@@ -25,6 +25,12 @@
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
   <style id="compiled-css" type="text/css">
+
+.container-o{
+  display:flex;
+  flex-wrap:wrap;
+}
+    
 .tile {
   -webkit-transform: scale(1);
           transform: scale(1);
@@ -122,6 +128,13 @@
           <img src="hom/homlogo01.gif">
         </div>
         <a class="tile-title" href="/medicine">Medical Lists</a>
+      </div>
+
+      <div class="tile">
+        <div class="tile-thumbnail">
+          <img src="hom/homlogo01.gif">
+        </div>
+        <a class="tile-title" href="/neurosim">Neurosim</a>
       </div>
 
     </div>
