--- a/applets/index.html
+++ b/applets/index.html
@@ -111,14 +111,14 @@
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
+          <img src="/hom/homlogo01.gif">
         </div>
         <a class="tile-title" href="/cudos">CUDOS</a>
       </div>
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
+          <img src="neurolab.png">
         </div>
         <a class="tile-title" href="/neurolab">Neurolab</a>
       </div>
