--- a/applets/index.html
+++ b/applets/index.html
@@ -104,7 +104,7 @@
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
+          <img src="pd.png">
         </div>
         <a class="tile-title" href="apd_profiles.html">APD Profiles</a>
       </div>
