--- a/applets/index.html
+++ b/applets/index.html
@@ -97,7 +97,7 @@
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
+          <img src="/hom/homlogo01.gif">
         </div>
         <a class="tile-title" href="/hom/index.html">HOM Physiology</a>
       </div>
