Update image links

--- a/applets/index.html
+++ b/applets/index.html
@@ -111,7 +111,7 @@
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="/hom/homlogo01.gif">
+          <img src="cudos.jpg">
         </div>
         <a class="tile-title" href="/cudos">CUDOS</a>
       </div>
@@ -125,14 +125,14 @@
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
+          <img src="medicallists.png">
         </div>
         <a class="tile-title" href="/medicine">Medical Lists</a>
       </div>
 
       <div class="tile">
         <div class="tile-thumbnail">
-          <img src="hom/homlogo01.gif">
+          <img src="neurosim.webp">
         </div>
         <a class="tile-title" href="/neurosim">Neurosim</a>
       </div>
