update new neurolab

--- a/neurolab/index.html
+++ b/neurolab/index.html
@@ -10,7 +10,7 @@
       (async function () {
         await cheerpjInit();
         cheerpjCreateDisplay(800, 600);
-        await cheerpjRunJar("/app/neurolab/Neurolab.jar");
+        await cheerpjRunJar("/app/Neurolab.jar");
       })();
     </script>
   </body>
