add instructions for APD profiles

--- a/applets/apd_profiles_ace.html
+++ b/applets/apd_profiles_ace.html
@@ -114,6 +114,20 @@
         </div>
         <div class="col-sm-8"><p>    
 
+            <h2> Instructions</h2>
+            <ol><li>
+                Chose two diagnoses that you want to compare (on the right)
+            </li><li>
+                Enter the ACE components. You need at lest 3 components.
+            </li><li>
+                To remove an ACE value, click on the number.
+            </li><li>
+                Read off the evidence in favour of one diagnosis relative to the other. A value of 1 logit corresponds to something like 1 standard deviation difference. 
+            </li></ol>
+
+            
+            </p><p>
+
             This tool is not a clinical diagnostic device. It is a tool for research use,
             to explore the relative patterns of cognitive features in different
             atypical parkinsonian syndromes.
