add reference to brain paper

--- a/applets/apd_profiles_ace.html
+++ b/applets/apd_profiles_ace.html
@@ -113,7 +113,18 @@
             </div>
         </div>
         <div class="col-sm-8"><p>    
+            <h3> Disclaimer </h3>
+                            This tool is not a clinical diagnostic device. It is a tool for research use,
+            to explore the relative patterns of cognitive features in different
+            atypical parkinsonian syndromes.
 
+            <h3> Reference </h3>
+                <a href='https://academic.oup.com/brain/advance-article/doi/10.1093/brain/awaf132/8114731'>
+                    Hu MT, Coma AQ, Rowe JB, Zerenner T, Church A, Fumi R, Constantini A, Jabbari E, Jensen MT, Herhard A, 
+                    Pavese N, Kobylecki C, Leigh PN, Koychev I, Morris H, Manohar SG, 
+                    &ldquo; Cognitive and neuropsychiatric profiles distinguish atypical parkinsonian syndromes &rdquo;,
+                    <i> Brain </i> (2025)
+                </a>
             <h2> Instructions</h2>
             <ol><li>
                 Chose two diagnoses that you want to compare (on the right)
