--- a/applets/apd_profiles_ace.html
+++ b/applets/apd_profiles_ace.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ja-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -120,7 +120,7 @@
 
             <h3> Reference </h3>
                 <a href='https://academic.oup.com/brain/advance-article/doi/10.1093/brain/awaf132/8114731'>
-                    Hu MT, Coma AQ, Rowe JB, Zerenner T, Church A, Fumi R, Constantini A, Jabbari E, Jensen MT, Herhard A, 
+                    Hu MT, Queretja-Coma A, Rowe JB, Zerenner T, Church A, Fumi R, Constantini A, Jabbari E, Jensen MT, Herhard A, 
                     Pavese N, Kobylecki C, Leigh PN, Koychev I, Morris H, Manohar SG, 
                     &ldquo; Cognitive and neuropsychiatric profiles distinguish atypical parkinsonian syndromes &rdquo;,
                     <i> Brain </i> (2025)
